--- a/app/src/main/res/layout/layout_scan_and_pay_process_step_2.xml
+++ b/app/src/main/res/layout/layout_scan_and_pay_process_step_2.xml
@@ -133,7 +133,7 @@
                 android:gravity="center"
                 android:layout_weight="0.2" />
 
-            <EditText
+            <TextView
                 android:id="@+id/txt_bill_total"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
