--- a/app/src/main/res/layout/new_emaisha_pay_home.xml
+++ b/app/src/main/res/layout/new_emaisha_pay_home.xml
@@ -955,25 +955,21 @@
             android:visibility="gone"/>
 
 
+
         <LinearLayout
-            android:id="@+id/img_slider"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="#DBF2FF"
-            android:layout_marginTop="15dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
             android:layout_below="@id/text_popular_products"
-            android:layout_alignParentBottom="true">
+            android:layout_alignParentBottom="true"
+            android:background="#DBF2FF"
+            android:layout_marginTop="15dp">
 
             <com.glide.slider.library.SliderLayout
                 android:id="@+id/product_cover_slider"
                 android:layout_width="match_parent"
                 android:layout_height="145dp"
-                android:layout_gravity="center"
-                android:paddingTop="-5dp"
-                android:paddingBottom="-5dp"
+                android:layout_marginTop="15dp"
+                android:background="#DBF2FF"
                 app:indicator_visibility="invisible"/>
 
         </LinearLayout>
