--- a/app/src/main/res/layout/fragment_card_list.xml
+++ b/app/src/main/res/layout/fragment_card_list.xml
@@ -56,7 +56,7 @@
                 android:id="@+id/imageView3"
                 android:layout_width="266dp"
                 android:layout_height="261dp"
-                android:src="@drawable/ic_no_card"
+                android:src="@drawable/ic_new_cards_placeholder"
                 app:layout_constraintBottom_toTopOf="@+id/guideline43"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -71,6 +71,7 @@
                 android:text="No Cards Added"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textStyle="bold"
+                android:textColor="#8c98a9"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintBottom_toTopOf="@+id/guideline45"
                 app:layout_constraintEnd_toEndOf="parent"
