--- a/app/src/main/res/layout/new_emaisha_pay_home.xml
+++ b/app/src/main/res/layout/new_emaisha_pay_home.xml
@@ -11,7 +11,8 @@
         tools:context="com.cabral.emaishapay.fragments.wallet_fragments.WalletHomeFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#f8f8ff">
+        android:background="#f8f8ff"
+        android:paddingBottom="25dp">
 
 
         <RelativeLayout
@@ -956,12 +957,16 @@
 
 
 
-        <LinearLayout
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/text_popular_products"
             android:layout_alignParentBottom="true"
-            android:background="#DBF2FF"
+            app:cardBackgroundColor="#DBF2FF"
+            app:cardElevation="0dp"
+            app:cardCornerRadius="5dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:layout_marginTop="15dp">
 
             <com.glide.slider.library.SliderLayout
@@ -969,10 +974,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="145dp"
                 android:layout_marginTop="15dp"
+                android:layout_marginBottom="5dp"
                 android:background="#DBF2FF"
                 app:indicator_visibility="invisible"/>
 
-        </LinearLayout>
+        </androidx.cardview.widget.CardView>
         <LinearLayout
             android:id="@+id/dots_layout"
             android:layout_width="wrap_content"
