--- a/app/src/main/res/layout/wallet_home.xml
+++ b/app/src/main/res/layout/wallet_home.xml
@@ -1,9 +1,14 @@
-<androidx.constraintlayout.widget.ConstraintLayout
+<FrameLayout
+    android:id="@+id/frameLayout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/transparent"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/main_Toolbar"
         android:layout_width="match_parent"
@@ -21,8 +26,10 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:defaultNavHost="true"
+        android:paddingBottom="58dp"
+        android:background="@color/transparent"
         app:navGraph="@navigation/wallet_home_navigation"
-        app:layout_constraintBottom_toTopOf="@+id/coordinator_layout_for_scanner"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -32,7 +39,8 @@
         android:id="@+id/coordinator_layout_for_scanner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#f8f8ff"
+        android:background="@color/transparent"
+        android:elevation="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -99,6 +107,6 @@
 
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
