Adjusted scan and pay icon

--- a/app/src/main/res/layout/fragment_wallet_rewards.xml
+++ b/app/src/main/res/layout/fragment_wallet_rewards.xml
@@ -5,6 +5,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginBottom="60dp"
     tools:context=".fragments.wallet_fragments.WalletRewardsFragment">
 
     <androidx.appcompat.widget.Toolbar
