--- a/app/src/main/res/layout/fragment_get_started_sign_up.xml
+++ b/app/src/main/res/layout/fragment_get_started_sign_up.xml
@@ -79,7 +79,7 @@
                     android:text="@string/phone_number"
                     android:textSize="16sp"
                     android:textColor="@color/colorPrimary"
-                    android:alpha=".5"/>
+                    android:alpha=".9"/>
 
 
 
@@ -100,7 +100,7 @@
                         android:gravity="center"
                         android:text="+256"
                         android:textColor="#303030"
-                        android:autoSizeMaxTextSize="12sp"
+                        android:textSize="12sp"
                         android:layout_marginStart="10dp"
                         android:layout_marginEnd="6dp"
                         app:drawableEndCompat="@drawable/ic_chevron_down"
@@ -154,7 +154,8 @@
                 android:id="@+id/layout_checkbox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="5dp"
                 app:layout_constraintTop_toBottomOf="@id/layout_enter_phone_number"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -162,19 +163,20 @@
 
             <CheckBox
                 android:id="@+id/checkbox_tcs"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
                 app:buttonTint="@color/colorPrimary"
                 android:minWidth="0dp"/>
                 <TextView
                     android:id="@+id/text_tcs_dialog"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:text="@string/checkbox_text"
                     android:textSize="13sp"
                     android:textColor="@color/colorPrimaryDark"
                     android:clickable="true"
-                    android:focusable="true"/>
+                    android:focusable="true"
+                    android:gravity="center_vertical"/>
             </LinearLayout>
 
 
@@ -215,7 +217,9 @@
                     android:text="Already have account? "
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="14sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"/>
 
                 <TextView
                     android:id="@+id/signin2"
@@ -225,7 +229,9 @@
                     android:text=" Sign in "
                     android:textColor="@color/colorPrimary"
                     android:textSize="14sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"/>
             </RelativeLayout>
 
 
