--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -78,7 +78,7 @@
                         android:text="Please login to your account."
                         android:textColor="@color/colorPrimary"
                         android:textSize="16sp"
-                        android:alpha=".9"/>
+                        android:alpha=".95"/>
 
 
 
@@ -103,7 +103,7 @@
                                 android:text="@string/phone_number"
                                 android:textSize="16sp"
                                 android:textColor="@color/colorPrimary"
-                                android:alpha=".5"/>
+                                android:alpha=".9"/>
 
                             <androidx.constraintlayout.widget.ConstraintLayout
                                 android:layout_width="match_parent"
@@ -234,18 +234,19 @@
                         <FrameLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp">
+                            android:layout_marginTop="8dp">
 
                             <TextView
                                 android:id="@+id/forgot_password_text"
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                                android:layout_height="match_parent"
                                 android:layout_gravity="center_horizontal"
                                 android:clickable="true"
                                 android:focusable="true"
                                 android:text="Forgot PIN"
                                 android:textColor="@color/colorPrimary"
-                                android:textSize="16sp" />
+                                android:textSize="16sp"
+                                android:padding="10dp"/>
 
                         </FrameLayout>
 
@@ -323,7 +324,7 @@
                         android:id="@+id/login_signupText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
+                        android:padding="8dp"
                         android:clickable="true"
                         android:focusable="true"
                         android:text="@string/create_a_new_account"
