--- a/app/src/main/res/layout/new_forgot_pin.xml
+++ b/app/src/main/res/layout/new_forgot_pin.xml
@@ -114,11 +114,12 @@
                                     android:gravity="center_vertical"
                                     android:inputType="phone"
                                     android:maxLength="9"
-                                    android:paddingStart="@dimen/dimen_10dp"
-                                    android:paddingLeft="@dimen/dimen_10dp"
+                                    android:padding="@dimen/dimen_10dp"
                                     android:tag="+256 "
+                                    android:textSize="14sp"
                                     android:textColor="@android:color/black"
-                                    android:textColorHint="@android:color/black" />
+                                    android:hint="Enter your mobile number"
+                                    android:textColorHint="@color/textHintColor"/>
                             </LinearLayout>
 
 
@@ -157,7 +158,8 @@
                                     android:background="@android:color/transparent"
                                     android:entries="@array/spinner_first_security_questions"
                                     android:gravity="center"
-                                    android:spinnerMode="dropdown" />
+                                    android:spinnerMode="dropdown"
+                                    android:paddingEnd="38dp"/>
 
                                 <ImageView
                                     android:layout_width="wrap_content"
@@ -180,7 +182,10 @@
                                 android:background="@drawable/rounded_gray_background"
                                 android:inputType="text"
                                 android:padding="10dp"
-                                android:textColor="#000" />
+                                android:textColor="#000"
+                                android:textSize="14sp"
+                                android:hint="Enter your answer"
+                                android:textColorHint="@color/textHintColor"/>
                         </LinearLayout>
 
                         <LinearLayout
@@ -216,7 +221,8 @@
                                     android:background="@android:color/transparent"
                                     android:entries="@array/spinner_second_security_questions"
                                     android:gravity="center"
-                                    android:spinnerMode="dropdown" />
+                                    android:spinnerMode="dropdown"
+                                    android:paddingEnd="38dp"/>
 
                                 <ImageView
                                     android:layout_width="wrap_content"
@@ -239,7 +245,10 @@
                                 android:background="@drawable/rounded_gray_background"
                                 android:inputType="text"
                                 android:padding="10dp"
-                                android:textColor="#000" />
+                                android:textColor="#000"
+                                android:textSize="14sp"
+                                android:hint="Enter your answer"
+                                android:textColorHint="@color/textHintColor"/>
                         </LinearLayout>
 
                         <LinearLayout
@@ -275,7 +284,8 @@
                                     android:background="@android:color/transparent"
                                     android:entries="@array/spinner_third_security_questions"
                                     android:gravity="center"
-                                    android:spinnerMode="dropdown" />
+                                    android:spinnerMode="dropdown"
+                                    android:paddingEnd="38dp"/>
 
                                 <ImageView
                                     android:layout_width="wrap_content"
@@ -296,10 +306,12 @@
                                 android:layout_height="45dp"
                                 android:layout_marginTop="10dp"
                                 android:background="@drawable/rounded_gray_background"
-                                android:fontFamily="@font/josefin_sans"
                                 android:inputType="text"
                                 android:padding="10dp"
-                                android:textColor="#000" />
+                                android:textColor="#000"
+                                android:textSize="14sp"
+                                android:hint="Enter your answer"
+                                android:textColorHint="@color/textHintColor"/>
                         </LinearLayout>
 
                     </LinearLayout>
