--- a/app/src/main/res/layout/buy_inputs_nearbymerchants.xml
+++ b/app/src/main/res/layout/buy_inputs_nearbymerchants.xml
@@ -25,7 +25,8 @@
             android:id="@+id/toolbar_nearby_merchants"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
-            app:popupTheme="@style/AppTheme.PopupOverlay"/>
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:navigationIcon="@drawable/ic_chevron_left_white"/>
 
     </com.google.android.material.appbar.AppBarLayout>
 <TextView
@@ -47,7 +48,9 @@
         android:layout_weight="1"
         app:layout_constraintTop_toBottomOf="@id/appbar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="15dp">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/merchants_list"
