fixed total price under POS sales

--- a/app/src/main/res/layout/fragment_sales_details.xml
+++ b/app/src/main/res/layout/fragment_sales_details.xml
@@ -99,8 +99,8 @@
                     android:layout_height="wrap_content"
                     android:paddingStart="15dp"
                     android:paddingBottom="10dp"
-                    android:text="$350000"
-                    android:textColor="@color/creditCardBackground"
+                    android:text="UGX 350000"
+                    android:textColor="@color/colorPrimary"
                     android:textSize="18sp"
                     android:textStyle="bold" />
             </LinearLayout>
