--- a/app/src/main/res/layout/order_details_item.xml
+++ b/app/src/main/res/layout/order_details_item.xml
@@ -55,7 +55,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Product Name"
-                    android:textColor="@color/creditCardBackground"
+                    android:textColor="@color/colorPrimary"
                     android:textSize="16sp" />
 
                 <TextView
