--- a/app/src/main/res/layout/buy_inputs_my_cart.xml
+++ b/app/src/main/res/layout/buy_inputs_my_cart.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 <RelativeLayout
     android:layout_width="match_parent"
@@ -134,12 +135,11 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cart_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="?actionBarSize"
-
         android:orientation="vertical"
         android:visibility="visible">
 
@@ -150,7 +150,11 @@
             android:layout_margin="@dimen/dimen_10dp"
             android:background="@drawable/round_rectangle_bg_light_gray"
             android:orientation="horizontal"
-            android:padding="@dimen/dimen_10dp">
+            android:padding="@dimen/dimen_10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/mainRvLayout">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -172,20 +176,20 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="@dimen/dimen_5dp"
+                    android:alpha=".6"
                     android:text="Deliver at : Home"
                     android:textColor="#31244A"
                     android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:alpha=".6"/>
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/default_delivery_location2_tv"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:alpha=".6"
                     android:text="Nakibinge Rd, Kampala, Uganda"
                     android:textColor="#31244A"
-                    android:textSize="16sp"
-                    android:alpha=".6"/>
+                    android:textSize="16sp" />
             </LinearLayout>
 
 
@@ -194,8 +198,12 @@
         <androidx.core.widget.NestedScrollView
             android:id="@+id/mainRvLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fillViewport="true">
+            android:layout_height="0dp"
+            android:fillViewport="true"
+            app:layout_constraintTop_toBottomOf="@id/location_layout"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="100dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -206,10 +214,21 @@
                     android:id="@+id/cart_items_recycler"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:layout_alignParentTop="true"
-                    android:layout_above="@id/layout_promo"/>
+                    android:layout_margin="5dp"/>
 
+                <Button
+                    android:id="@+id/btn_clear_cart"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/dimen_10dp"
+                    android:background="@drawable/rectangular_blue_solid"
+                    android:padding="@dimen/dimen_8dp"
+                    android:text="clear cart"
+                    android:textAllCaps="true"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/button_text_size"
+                    android:textStyle="bold"
+                    android:layout_below="@id/layout_promo"/>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/layout_promo"
@@ -218,11 +237,11 @@
                     android:layout_margin="@dimen/dimen_10dp"
                     android:background="#222222"
                     android:padding="@dimen/dimen_5dp"
-                    android:layout_above="@id/btn_clear_cart">
+                    android:layout_below="@id/cart_items_recycler">
 
                     <TextView
                         android:id="@+id/promo_text"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_margin="8dp"
@@ -231,7 +250,8 @@
                         android:textSize="14sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintEnd_toStartOf="@id/promo_image"/>
 
                     <ImageView
                         android:id="@+id/promo_image"
@@ -247,82 +267,8 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
-                <Button
-                    android:id="@+id/btn_clear_cart"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/dimen_10dp"
-                    android:background="@drawable/rectangular_blue_solid"
-                    android:padding="@dimen/dimen_8dp"
-                    android:text="clear cart"
-                    android:textAllCaps="true"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/button_text_size"
-                    android:textStyle="bold"
-                    android:layout_above="@id/checkout_button_layout"/>
-
-                <LinearLayout
-                    android:id="@+id/checkout_button_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginTop="10dp">
 
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentBottom="true"
-                        android:background="@drawable/topcornerscurved"
-                        android:elevation="@dimen/dimen_10dp"
-                        android:padding="10dp">
-
-                        <LinearLayout
-                            android:id="@+id/layout_total_payment"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="8dp"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginBottom="@dimen/dimen_5dp"
-                                android:text="Total Payment"
-                                android:textColor="#515C6F"
-                                android:textSize="16sp"
-                                android:textStyle="bold" />
-
-                            <TextView
-                                android:id="@+id/cart_item_total_price"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:text="UGX 00.0"
-                                android:textColor="@color/colorPrimary"
-                                android:textSize="20sp"
-                                android:textStyle="bold" />
-
-                        </LinearLayout>
-
-                        <Button
-                            android:id="@+id/cart_checkout_btn"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="8dp"
-                            android:layout_weight="1"
-                            android:background="@drawable/rectangular_blue_solid"
-                            android:paddingEnd="20dp"
-                            android:drawablePadding="10dp"
-                            android:drawableEnd="@drawable/ic_right_chevron_arrow_white"
-                            android:text="Checkout"
-                            android:textAllCaps="true"
-                            android:textColor="@color/white"
-                            android:textSize="@dimen/button_text_size"
-                            android:textStyle="bold" />
-
-
-                    </LinearLayout>
-                </LinearLayout>
 
             </RelativeLayout>
 
@@ -330,49 +276,72 @@
         </androidx.core.widget.NestedScrollView>
 
 
-        <!--<LinearLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
 
             <LinearLayout
-                android:layout_weight=".5"
-                android:layout_width="0dip"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:gravity="center"
-                android:background="@color/colorAccent"
-                android:padding="5dp" >
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:background="@drawable/topcornerscurved"
+                android:elevation="@dimen/dimen_10dp"
+                android:padding="10dp">
 
-                <TextView
-                    android:id="@+id/cart_total_price"
+                <LinearLayout
+                    android:id="@+id/layout_total_payment"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Total $0.00"
+                    android:layout_margin="8dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/dimen_5dp"
+                        android:text="Total Payment"
+                        android:textColor="#515C6F"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/cart_item_total_price"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="UGX 00.0"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+                <Button
+                    android:id="@+id/cart_checkout_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/rectangular_blue_solid"
+                    android:drawableEnd="@drawable/ic_right_chevron_arrow_white"
+                    android:drawablePadding="10dp"
+                    android:paddingEnd="20dp"
+                    android:text="Checkout"
+                    android:textAllCaps="true"
                     android:textColor="@color/white"
-                    android:textSize="18sp"
-                    android:textAlignment="textStart"
-                    android:gravity="start"
-                    android:padding="5dp" />
+                    android:textSize="@dimen/button_text_size"
+                    android:textStyle="bold"
+                    android:layout_gravity="center_vertical"/>
+
 
             </LinearLayout>
-
-            <Button
-                android:id="@+id/cart_checkout_btn"
-                android:layout_weight=".5"
-                android:layout_width="0dip"
-                android:layout_height="match_parent"
-                android:text="@string/checkoutFinal"
-                android:textAllCaps="false"
-                android:textSize="18sp"
-                android:textColor="@color/white"
-                android:textAlignment="center"
-                android:background="@color/colorPrimary" />
-
-        </LinearLayout>-->
+        </LinearLayout>
 
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </RelativeLayout>
 </layout>
