minor ui changes

--- a/app/src/main/res/layout/buy_inputs_products.xml
+++ b/app/src/main/res/layout/buy_inputs_products.xml
@@ -31,7 +31,7 @@
 
     <com.cabral.emaishapay.customs.CustomViewPager
         android:id="@+id/product_viewpager"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:background="@color/windowBackground"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
