Place holder for nearby merchant

--- a/app/src/main/res/layout/buy_inputs_nearbymerchants.xml
+++ b/app/src/main/res/layout/buy_inputs_nearbymerchants.xml
@@ -29,13 +29,11 @@
             app:navigationIcon="@drawable/ic_chevron_left_white"/>
 
     </com.google.android.material.appbar.AppBarLayout>
-<TextView
+<ImageView
     android:id="@+id/no_nearby_merchant"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="NO NEARBY MERCHANT FOUND"
-    android:textSize="18sp"
-    android:textColor="@color/colorPrimary"
+    android:src="@drawable/no_merchant_placeholder"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toBottomOf="@id/appbar"
